test_yuriiq/catalog/language/russian/information/contact.php
<?php

// text
$_['text_location']	= 'Наше местонахождение';
$_['text_telephone']	= 'Телефон:';
$_['text_contact']	= 'Написать нам';
$_['text_address']	= 'Адрес:';
$_['text_email']	= 'E-Mail:';
$_['text_fax']	= 'Факс:';
$_['text_message']	= '<p>Ваш запрос был успешно отправлен администрации магазина!</p>';

// error
$_['error_captcha']	= 'Проверочный код не совпадает с изображением!';
$_['error_enquiry']	= 'Длина текста должна быть от 10 до 3000 символов!';
$_['error_email']	= 'E-mail адрес введён неверно!';
$_['error_name']	= 'Имя должно быть от 3 до 32 символов!';

// email
$_['email_subject']	= 'Вопрос: %s';

// entry
$_['entry_name']	= 'Ваше имя:';
$_['entry_captcha']	= 'Введите код, указанный на картинке:';
$_['entry_enquiry']	= 'Ваш вопрос:';
$_['entry_email']	= 'Ваш E-Mail:';

// heading
$_['heading_title']	= 'Связаться с нами';
?>